[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "examples"
version = "0.1.0"
description = "Use this file to configure a virtual environment for our textbook examples."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4",
    "dweepy",
    "geopy",
    "imageio",
    "ipykernel",
    "jupyterlab",
    "matplotlib",
    "nltk",
    "numpy",
    "pandas",
    "prospector",
    "scikit-learn",
    "scipy",
    "seaborn",
    "spacy",
    "textatistic",
    "textblob"
]

[project.optional-dependencies]
later = [
    "pymongo",
    "pyspark",
    "tensorflow",
    "wordcloud"
]
